# rust-etherscan

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
src/: constants.rs  main.rs  routes.rs
src/api/: etherscan.rs  mod.rs  stories.rs
src/components/: custom_button.rs  custom_input.rs  label_and_value.rs  layout.rs  mod.rs
src/pages/: address.rs  home.rs  mod.rs  page_not_found.rs  test.rs
