[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.1", features = ["serde"] }
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
futures = "0.3.28"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = "1.0.188"
wasm-logger = "0.2.0"
